Add user language preference and locale-aware emails
Introduces user language preference support in the database and API, including migration and profile update UI. All user-triggered emails (order, password reset, verification) now use the user's preferred locale for content and subject. Adds new translation files for orders, updates payment translations, and refactors order email logic into a shared module. Improves locale handling in dashboard, home, and payment success pages, and enhances the language switcher to persist preference for authenticated users.

--- a/src/emails/en/password-reset.html
+++ b/src/emails/en/password-reset.html
@@ -18,7 +18,8 @@
       <div style="text-align:center;margin-bottom:20px;">
         <p style="color:#333333;font-size:16px;margin:0 0 10px 0;line-height:1.5;">Hello,</p>
         <p style="color:#666666;font-size:14px;margin:0;line-height:1.6;">We received a password reset request for
-          <strong>{{userEmail}}</strong>.</p>
+          <strong>{{userEmail}}</strong>.
+        </p>
       </div>
 
       <div style="text-align:center;margin:24px 0;">
