TL para birimi gösterimi düzeltmesi

--- a/src/emails/tr/question-answered.html
+++ b/src/emails/tr/question-answered.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sorunuz Yanıtlandı</title>
   <style>
-    body { font-family: Arial, sans-serif; color: #111827; background: #ffffff; }
-    .container { max-width: 640px; margin: 0 auto; padding: 24px; }
-    .title { font-size: 20px; font-weight: 700; margin-bottom: 12px; }
-    .subtitle { color: #6b7280; margin-bottom: 18px; }
-    .card { border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; margin-bottom: 16px; }
-    .label { font-weight: 600; margin-bottom: 6px; }
-    .button { display: inline-block; background: #111827; color: #ffffff; padding: 12px 18px; border-radius: 6px; text-decoration: none; }
-    .muted { color: #6b7280; font-size: 14px; }
+    body {
+      font-family: Arial, sans-serif;
+      color: #111827;
+      background: #ffffff;
+    }
+
+    .container {
+      max-width: 640px;
+      margin: 0 auto;
+      padding: 24px;
+    }
+
+    .title {
+      font-size: 20px;
+      font-weight: 700;
+      margin-bottom: 12px;
+    }
+
+    .subtitle {
+      color: #6b7280;
+      margin-bottom: 18px;
+    }
+
+    .card {
+      border: 1px solid #e5e7eb;
+      border-radius: 8px;
+      padding: 16px;
+      margin-bottom: 16px;
+    }
+
+    .label {
+      font-weight: 600;
+      margin-bottom: 6px;
+    }
+
+    .button {
+      display: inline-block;
+      background: #111827;
+      color: #ffffff;
+      padding: 12px 18px;
+      border-radius: 6px;
+      text-decoration: none;
+    }
+
+    .muted {
+      color: #6b7280;
+      font-size: 14px;
+    }
   </style>
 </head>
+
 <body>
   <div class="container">
     <div class="title">Sorunuz yanıtlandı</div>
@@ -39,4 +81,5 @@
     </p>
   </div>
 </body>
+
 </html>
